expand interval and dateutils